2006-11-06  Aaron Stone  <aaron@serendipity.cx>

	* dbmail.h.in:
	Add LDAP_DEPRECATED because we haven't switch LDAP API's to the new
	ldap_bind_sasl and friends.
	* configure.in:
	Version bump to 2.2

2006-11-06  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/dbmail.postinst:
	pre-release updates
	* db.c:
	revert mysql optimization (closes #440)
	* debian/control, test-scripts/testimap.py:
	fix depends

2006-11-05  Aaron Stone  <aaron@serendipity.cx>

	* serverparent.h, serverparent.c, pop3.c, timsieve.c, lmtp.c:
	Moved validchars into serverparent.c as ValidNetworkChars, with a
	wider tolerance for allowed characters (closes bug #435).
	* misc.c:
	Removed an unused variable.

2006-11-05  Paul J Stevens <paul@nfg.nl>

	* imapcommands.c:
	fix sort/search/thread bug
	* debian/control:
	update dependencies

2006-11-04  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_util.c, db.c, modules/dbmysql.c:
	re-add the MR optimization

2006-11-03  Aaron Stone  <aaron@serendipity.cx>

	* sql/mysql/migrate_from_2.0_to_2.2.mysql,
	sql/mysql/2_1_7-2_2_0.mysql:
	Make the envelope table creations consistent.

2006-11-03  Paul J Stevens <paul@nfg.nl>

	* dbmail-message.c, modules/dbpgsql.c:
	fully revert the utf8 behaviour. sql_ascii is the only supported db
	encoding again for postgresql
	* dbmail-message.c:
	removed remaining utf8 conversion

2006-11-02  Aaron Stone  <aaron@serendipity.cx>

	* authmodule.c, dbmodule.c, sortmodule.c:
	Changed count of paths to attempt, and added a comment about it.
	Added more debugging info, closed a minor memory leak.
	* debug.h, modules/authsql.c:
	Removed relics of memtst and func_memtst.

2006-11-02  Paul J Stevens <paul@nfg.nl>

	* check_dbmail.h, check_dbmail_message.c, misc.c, modules/dbpgsql.c:
	push utf8 conversion to pgsql driver and remove utf7 encoding from
	subject in envelope

2006-11-01  Paul J Stevens <paul@nfg.nl>

	* debian/changelog, debian/dbmail-ldap.templates, 